# search_engine

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  cur_dir.txt  imgui.ini
indexer/: CMakeLists.txt
indexer/include/: indexer.hpp  trie.hpp
indexer/src/: indexer.cpp  trie.cpp
searcher/: CMakeLists.txt
searcher/include/: searcher.hpp
searcher/src/: searcher.cpp
tests/: CMakeLists.txt  sseng_tests  sseng_tests.cpp
